<resources>
    <string name="app_name">Prism4D</string>
    <string name="ygps_app_name">Prism4D YGPS Skyplot</string>
    <string name="gps_app_name">GPS Skyplot</string>
    <string name="title_activity_prism4d_collect_points_maps">Map</string>
    <string name="unused_button_label"> </string>
    <string name="no_points_in_project">No Points in Project</string>
    <string name="exchange_subject">Exchange for Project </string>
    <string name="email_message_prologue_1">This email contains CDF for Project:</string>
    <string name="email_message_prologue_2"> and any points it contains</string>
    <string name="project_not_open_to_list_points">Project must be open to list points</string>
    <string name="project_opened_1">Project ID =   </string>
    <string name="project_opened_2">     now Open </string>
    <string name="cogo_project_must_be_open">Project must be open to add points</string>
    <string name="no_project_open">No Project Open</string>
    <string name="collect_project_must_be_open">Project must be Open to collect points</string>
    <string name="coordinate_not_valid"        >Coordinate not valid, point not saved</string>
    <string name="error_adding_point"          >Could not add point to DB</string>
    <string name="database_context_exception">Can\'t create database without a context</string>
    <string name="database_access_exception1">Attempt to access the database before it has been initialized</string>
    <string name="database_access_exception2">Attempt to access the database before it has been opened</string>
    <string name="project_missing_exception" >Something is wrong, project does not exist</string>
    <string name="no_projects"               >No projects defined</string>
    <string name="no_pictures"               >No pictures defined</string>
    <string name="no_points"                 >No points defined</string>
    <string name="date_hint"                 >Must use proper date input</string>
    <string name="test_data_invalid"         >Test Data Not Valid</string>
    <string name="error_adding_picture_to_db">Error adding picture to DB, picture not saved</string>
    <string name="error_removing_point"      >Error removing point from project</string>
    <string name="missing_picture_file"      >Missing Picture File: </string>
    <string name="action_home">Home</string>
    <string name="action_project">Project</string>
    <string name="action_collect">Collect</string>
    <string name="action_stakeout">Stakeout</string>
    <string name="action_cogo">COGO</string>
    <string name="action_maps">Maps</string>
    <string name="action_skyplots">Skyplots</string>
    <string name="action_config">Config</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_convert">Convert</string>
    <string name="subtitle_home">Home</string>
    <string name="subtitle_create_project">Create Project</string>
    <string name="subtitle_open_project">Open Project</string>
    <string name="subtitle_copy_project">Copy Project</string>
    <string name="subtitle_edit_project">Edit Project</string>
    <string name="subtitle_delete_project">Delete Project</string>
    <string name="subtitle_error_in_path">Error in Project Path through App. Please send report</string>
    <string name="subtitle_maintain_project">Maintain Project</string>
    <string name="subtitle_maintain_point">Maintain Point</string>
    <string name="subtitle_create_point">Create Point</string>
    <string name="subtitle_open_point">Open Point</string>
    <string name="subtitle_copy_point">Copy Point</string>
    <string name="subtitle_edit_point">Edit Point</string>
    <string name="subtitle_delete_point">Delete Point</string>
    <string name="subtitle_show_point">Show Point</string>
    <string name="subtitle_collect_points">Collect Points</string>
    <string name="subtitle_collect">Collect</string>
    <string name="subtitle_cogo">COGO</string>
    <string name="subtitle_configurations">Configurations</string>
    <string name="subtitle_points">Points</string>
    <string name="subtitle_projects">Projects</string>
    <string name="subtitle_settings">Settings</string>
    <string name="subtitle_skyplots">Skyplot</string>
    <string name="subtitle_stakeout">Stakeout</string>
    <string name="subtitle_maps">Maps</string>
    <string name="subtitle_support">Support</string>
    <string name="subtitle_general_settings">General Settings</string>
    <string name="subtitle_compass">Compass</string>
    <string name="subtitle_coordinate_conversion">Coordinate Conversion</string>
    <string name="subtitle_global_settings">Global Settings</string>
    <string name="subtitle_project_settings">Project Settings</string>
    <string name="subtitle_convert_to_utm">Convert to UTM</string>
    <string name="subtitle_list_nmea">List NMEA Sentences</string>
    <string name="subtitle_list_satellites">List Visible Satellites</string>
    <string name="subtitle_gps_nmea">GPS data from NMEA</string>
    <string name="subtitle_workflow">Coordinate Workflow</string>
    <string name="subtitle_unknown_error">Unknown Error</string>
    <string name="action_measure_points">Measure Points</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_global_settings">Global_Settings</string>
    <string name="action_project_default_settings">Project_Defaults</string>
    <string name="action_delete">Delete</string>
    <string name="latitude_out_of_range">Latitude out of range</string>
    <string name="longitude_out_of_range">Longitude out of range</string>
    <string name="coordinate_invalid">Coordinate out of range</string>
    <string name="coordinate_try_again">Coordinates not valid, please input again</string>
    <string name="projects_button_label">Project</string>
    <string name="collect_button_label">Collect</string>
    <string name="stakeout_button_label">Stakeout</string>
    <string name="cogo_button_label">COGO</string>
    <string name="maps_button_label">Maps</string>
    <string name="skyplot_button_label">Skyplot</string>
    <string name="config_button_label">Configuration</string>
    <string name="settings_button_label">Settings</string>
    <string name="help_button_label">Support</string>
    <string name="groundstation_contentdescription">Ground Station Icon</string>
    <string name="maps_single_point_contentdescription">Single point highlighted on map</string>
    <string name="create_button_label">Create</string>
    <string name="open_button_label">Open</string>
    <string name="copy_button_label">Copy</string>
    <string name="edit_button_label">Edit</string>
    <string name="delete_button_label">Delete</string>
    <string name="control_button_label">Control</string>
    <string name="maintain_points_button_label">Maintain Points</string>
    <string name="list_points_button_label">List Points</string>
    <string name="feature_codes_button_label">Feature Codes</string>
    <string name="exchange_button_label">Exchange</string>
    <string name="unrecognized_path_encountered">Unrecognized Path Encountered: </string>
    <string name="delete_path_1">Selected Project </string>
    <string name="delete_path_2"> is Deleted</string>
    <string name="project_unchanged"  >Project unchanged, exit without saving</string>
    <string name="settings_stored"    >Settings Stored</string>
    <string name="exit_without_save"  >Exit Without Saving</string>
    <string name="save_contents"      >Data Saved Before Exit</string>
    <string name="save_new_point"     >New Point saved to Permanent Storage</string>
    <string name="save_existing_point">Existing Point updated in Permanent Storage</string>
    <string name="save_copied_point"  >Copied Point saved to Permanent Storage</string>
    <string name="project_demo_descr"
        >Sargent Road Reconnaissance Survey. Party Chief: Rusty Martin, GPS Rodman: Chip Schuller
        </string>
    <string name="project_list_title">ID    Name    Date Last Touched    Points</string>
    <string name="project_view_existing_label">View Projects</string>
    <string name="project_create_button_label">Create Project</string>
    <string name="project_settings_button_label">View Settings</string>
    <string name="project_screen_label">Project Attributes</string>
    <string name="project_name_label">Name: </string>
    <string name="project_id_label">ID: </string>
    <string name="project_id_will_be_label">ID will be:</string>
    <string name="project_creation_date_label">Created: </string>
    <string name="project_last_modified_date_label">Modified: </string>
    <string name="project_description_label">Description: </string>
    <string name="project_coord_label">Coord Type</string>
    <string name="project_stored">Project Attributes Stored</string>
    <string name="project_selected">Project Selected</string>
    <string name="project_selection_ignored">Project Selection Ignored</string>
    <string name="project_no_selection">Project Has NOT been selected yet</string>
    <string name="project_row_id_label">ID: </string>
    <string name="project_row_name_label">Name: </string>
    <string name="project_row_creation_date_label">Created: </string>
    <string name="project_row_last_modified_date_label">Modified: </string>
    <string name="project_row_description_label">Description: </string>
    <string name="project_row_size_label">Size: </string>
    <string name="point_row_project_id_label">Project</string>
    <string name="point_row_point_id_label">Point</string>
    <string name="point_row_easting_label">Easting</string>
    <string name="point_row_northing_label">Northing</string>
    <string name="point_row_latitude_label">Latitude</string>
    <string name="point_row_longitude_label">Longitude</string>
    <string name="point_row_elevation_label">Elevation</string>
    <string name="point_row_feature_code_label">FC</string>
    <string name="point_row_notes_label">Notes</string>
    <string name="point_no_coordinate_type">Coordinate Type not specified</string>
    <string name="satellite_row_id_label">ID: </string>
    <string name="satellite_row_elevation_label">Elevation: </string>
    <string name="satellite_row_azimuth_label">Azimuth: </string>
    <string name="satellite_row_snr_label">Signal To Noise: </string>
    <string name="satellite_selected">Satellite selected</string>
    <string name="point_screen_label"      >All Point Attributes MUST have a value</string>
    <string name="datum_label">Datum: </string>
    <string name="elevation_label">Elevation:  </string>
    <string name="geoid_height_label">Geoid: </string>
    <string name="utm_coord_label">UTM Coord: </string>
    <string name="utm_convergence_label">Convergence </string>
    <string name="utm_scale_factor_label">Scale Factor </string>
    <string name="zone_label">Zone </string>
    <string name="easting_label">Easting M/F:</string>
    <string name="northing_label">Northing M/F:</string>
    <string name="easting_meters_label">Easting Meters</string>
    <string name="northing_meters_label">Northing Meters</string>
    <string name="easting_feet_label">Easting Feet</string>
    <string name="northing_feet_label">Northing Feet</string>
    <string name="hemisphere_label">Hemi </string>
    <string name="latband_label">Latband </string>
    <string name="convergence_label">Convergence </string>
    <string name="coord_scale_factor_label">Scale Factor </string>
    <string name="utm_prompt"       >UTM: Universal Transverse Mercator Coordinate</string>
    <string name="type_elevation_feet_label">Elevation feet</string>
    <string name="type_elevation_meters_label">Elevation meters</string>
    <string name="type_geoid_height_feet_label">Geoid Height feet</string>
    <string name="type_geoid_height_meters_label">Geoid Height meters</string>
</resources>