<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"


    android:focusable="false"
    android:clickable="false"

    android:paddingTop="@dimen/interum_vertical"

    android:background="@color/colorScreenBackground"
    >
    <!-- Project ID 5-->
    <TextView
        android:text="@string/point_row_project_id_label"

        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_marginEnd="8dp"

        android:textColor="@color/colorTextBlack"
        android:background="@color/colorScreenBackground"
        />

    <!-- Point ID 6-->
    <TextView
        android:text="@string/point_row_point_id_label"

        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="6"
        android:layout_marginEnd="8dp"

        android:textColor="@color/colorTextBlack"
        android:background="@color/colorScreenBackground"
        />

    <!-- Easting 10-->
    <TextView
        android:text="@string/point_row_easting_label"

        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_marginEnd="8dp"

        android:textColor="@color/colorTextBlack"
        android:background="@color/colorScreenBackground"
        />

    <!-- Northing 10-->
    <TextView
        android:text="@string/point_row_northing_label"

        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_marginEnd="8dp"

        android:textColor="@color/colorTextBlack"
        android:background="@color/colorScreenBackground"
        />

    <!-- Elevation 10-->
    <TextView
        android:text="@string/point_row_elevation_label"

        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_marginEnd="8dp"

        android:textColor="@color/colorTextBlack"
        android:background="@color/colorScreenBackground"
        />

    <!-- Feature Code 15-->
    <TextView
            android:text="@string/point_row_feature_code_label"

            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_marginEnd="16dp"

            android:textColor="@color/colorTextBlack"
            android:background="@color/colorScreenBackground"
            />

</LinearLayout>