<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android               = "http://schemas.android.com/apk/res/android"
          android:orientation   = "vertical"
          android:layout_width  = "match_parent"
          android:layout_height = "wrap_content"

          android:paddingBottom = "20dp"
    >

    <!--  Prompt (UTM is the default, replace if SPCS -->
    <TextView
        android:id            = "@+id/en_prompt"
        android:text          = "@string/utm_prompt"
        android:layout_height = "wrap_content"
        android:layout_width  = "wrap_content"
        android:layout_gravity= "center_horizontal"
        android:gravity       = "center"

        android:paddingBottom = "15dp"

        android:textColor     = "@color/colorTextBlack"
        android:background    = "@color/colorScreenBackground"
        />

    <!-- break out the fields individually -->
    <!-- Zone Hemisphere Latband -->
    <LinearLayout
        android:layout_width  = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation   = "horizontal"

        >
        <!-- label -->
        <TextView
            android:id            = "@+id/coord_label"
            android:text          = "@string/utm_coord_label"
            android:layout_height = "wrap_content"
            android:layout_width  = "0dp"
            android:layout_weight = "25"
            android:gravity       = "end"

            android:textColor     = "@color/colorTextBlack"
            android:background    = "@color/colorScreenBackground"
            />

        <!-- zone -->
        <TextView
            android:id               = "@+id/zoneOutput"
            android:hint             = "@string/zone_label"
            android:layout_height    = "wrap_content"
            android:layout_width     = "0dp"
            android:layout_weight    = "50"

            android:layout_marginEnd = "6dp"

            android:gravity="center"

            android:textColor="@color/colorTextBlack"
            android:background="@color/colorWhite"
            />

        <!-- hemisphere -->
        <TextView
            android:id               = "@+id/hemisphereOutput"
            android:hint             = "@string/hemisphere_label"
            android:layout_height    = "wrap_content"
            android:layout_width     = "0dp"
            android:layout_weight    = "50"

            android:layout_marginStart= "6dp"
            android:layout_marginEnd  = "6dp"

            android:gravity="center"

            android:textColor="@color/colorTextBlack"
            android:background="@color/colorWhite"

            />

        <!-- LatBand -->
        <TextView
            android:id               = "@+id/latbandOutput"
            android:hint             = "@string/latband_label"
            android:layout_height    = "wrap_content"
            android:layout_width     = "0dp"
            android:layout_weight    = "50"

            android:layout_marginStart= "6dp"
            android:layout_marginEnd  = "16dp"

            android:gravity="center"

            android:textColor="@color/colorTextBlack"
            android:background="@color/colorWhite"
            />

    </LinearLayout>

    <!-- Easting Meters/Feet -->
    <LinearLayout
        android:layout_width  = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation   = "horizontal"
        >

        <!-- Easting -->
        <TextView
            android:text          = "@string/easting_label"
            android:layout_height = "wrap_content"
            android:layout_width  = "0dp"
            android:layout_weight = "25"
            android:gravity       = "end"
            android:layout_marginTop="6dp"

            android:textColor     = "@color/colorTextBlack"
            android:background    = "@color/colorScreenBackground"

            />

        <!-- Easting Meters -->
        <TextView
            android:id               = "@+id/EastingMetersOutput"
            android:hint             = "@string/easting_meters_label"
            android:layout_height    = "wrap_content"
            android:layout_width     = "0dp"
            android:layout_weight    = "75"

            android:layout_marginTop  = "6dp"
            android:layout_marginEnd  = "6dp"

            android:gravity           = "center"

            android:textColor         = "@color/colorTextBlack"
            android:background        = "@color/colorWhite"

            />

        <!-- Easting Feet -->
        <TextView
            android:id               = "@+id/EastingFeetOutput"
            android:hint             = "@string/easting_feet_label"
            android:layout_height    = "wrap_content"
            android:layout_width     = "0dp"
            android:layout_weight    = "75"

            android:layout_marginTop  = "6dp"
            android:layout_marginStart= "6dp"
            android:layout_marginEnd  = "16dp"

            android:gravity           = "center"

            android:textColor         = "@color/colorTextBlack"
            android:background        = "@color/colorWhite"
            />

    </LinearLayout>

    <!-- Northing meters/Feet -->
    <LinearLayout
        android:layout_width  = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation   = "horizontal"
        >

        <!-- Northing -->
        <TextView
            android:text          = "@string/northing_label"
            android:layout_height = "wrap_content"
            android:layout_width  = "0dp"
            android:layout_weight = "25"
            android:gravity       = "end"

            android:layout_marginTop="6dp"

            android:textColor     = "@color/colorTextBlack"
            android:background    = "@color/colorScreenBackground"

            />
        <!-- Northing Meters -->
        <TextView
            android:id               = "@+id/NorthingMetersOutput"
            android:hint             = "@string/northing_meters_label"
            android:layout_height    = "wrap_content"
            android:layout_width     = "0dp"
            android:layout_weight    = "75"

            android:layout_marginTop  = "6dp"
            android:layout_marginEnd  = "6dp"

            android:gravity           = "center"

            android:textColor         = "@color/colorTextBlack"
            android:background        = "@color/colorWhite"

            />

        <!-- Northing Feet -->
        <TextView
            android:id               = "@+id/northingFeetOutput"
            android:hint             = "@string/northing_feet_label"
            android:layout_height    = "wrap_content"
            android:layout_width     = "0dp"
            android:layout_weight    = "75"

            android:layout_marginTop  = "6dp"
            android:layout_marginStart= "6dp"
            android:layout_marginEnd  = "16dp"

            android:gravity           = "center"

            android:textColor         = "@color/colorTextBlack"
            android:background        = "@color/colorWhite"
            />


    </LinearLayout>

    <!-- Convergence / Scale Factor -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <!-- Convergence -->
        <TextView
            android:text="@string/utm_convergence_label"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:gravity="end"

            android:layout_marginTop="6dp"

            android:textColor="@color/colorTextBlack"
            android:background="@color/colorScreenBackground"
            />
        <TextView
            android:id="@+id/utmConvergence"
            android:hint="@string/utm_convergence_label"

            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="50"

            android:gravity="center"

            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="16dp"


            android:textColor="@color/colorTextBlack"
            android:background="@color/colorWhite"
            />

        <!-- Scale Factor -->
        <TextView
            android:text="@string/utm_scale_factor_label"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:gravity="end"

            android:layout_marginTop="6dp"

            android:textColor="@color/colorTextBlack"
            android:background="@color/colorScreenBackground"
            />
        <TextView
            android:id="@+id/utmScaleFactor"
            android:hint="@string/utm_scale_factor_label"

            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="50"

            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="16dp"

            android:textColor="@color/colorTextBlack"
            android:background="@color/colorWhite"
            />

    </LinearLayout>

</LinearLayout>